/**
 * æŠ•è¯‰ç›¸å…³API
 */

import { request } from './request'

/**
 * åˆ›å»ºæŠ•è¯‰
 * @param {Object} questionInfo - æŠ•è¯‰ä¿¡æ¯
 * @returns {Promise<void>}
 */
export async function createComplaint(questionInfo) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, CreateQuestionReq, QuestionInfo } = proto.po

  console.log('=== åˆ›å»ºæŠ•è¯‰è¯·æ±‚ ===')
  console.log('æŠ•è¯‰ä¿¡æ¯:', questionInfo)

  const questionInfoProto = QuestionInfo.create(questionInfo)

  const createReq = CreateQuestionReq.create({
    questionInfo: questionInfoProto
  })

  await request(MsgType.TMT_CreateQuestionReq, createReq)

  console.log('========================================')
  console.log('âœ… æŠ•è¯‰åˆ›å»ºæˆåŠŸ')
  console.log('========================================')
  console.log(' ')
}

/**
 * æ›´æ–°æŠ•è¯‰
 * @param {Object} questionInfo - æŠ•è¯‰ä¿¡æ¯
 * @returns {Promise<void>}
 */
export async function updateComplaint(questionInfo) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, UpdateQuestionReq, QuestionInfo } = proto.po

  console.log('=== æ›´æ–°æŠ•è¯‰è¯·æ±‚ ===')
  console.log('æŠ•è¯‰ä¿¡æ¯:', questionInfo)

  const questionInfoProto = QuestionInfo.create(questionInfo)

  const updateReq = UpdateQuestionReq.create({
    questionInfo: questionInfoProto
  })

  await request(MsgType.TMT_UpdateQuestionReq, updateReq)

  console.log('========================================')
  console.log('âœ… æŠ•è¯‰æ›´æ–°æˆåŠŸ')
  console.log('========================================')
  console.log(' ')
}

/**
 * è·å–æŠ•è¯‰åˆ—è¡¨
 * @param {number} page - é¡µç 
 * @param {number} size - æ¯é¡µæ•°é‡
 * @returns {Promise<Array>}
 */
export async function getComplaintList(page = 1, size = 10) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, ListQuestionReq, ListQuestionRsp } = proto.po

  console.log('=== è·å–æŠ•è¯‰åˆ—è¡¨è¯·æ±‚ ===')
  console.log('é¡µç :', page, 'æ¯é¡µæ•°é‡:', size)

  const listReq = ListQuestionReq.create({
    page: page,
    size: size
  })

  const response = await request(MsgType.TMT_ListQuestionReq, listReq)
  const listRsp = ListQuestionRsp.decode(response.msg)

  console.log('========================================')
  console.log('ğŸ“ æŠ•è¯‰åˆ—è¡¨å“åº” - è§£ç åçš„ä¸šåŠ¡æ•°æ®')
  console.log('========================================')
  console.log('æŠ•è¯‰æ•°é‡:', listRsp.infos?.length || 0)
  if (listRsp.infos && listRsp.infos.length > 0) {
    console.log('æŠ•è¯‰åˆ—è¡¨:')
    listRsp.infos.forEach((question, index) => {
      console.log(`  [${index + 1}] ID:${question.questionId} ç±»å‹:${question.questionType} çŠ¶æ€:${question.nodeType}`)
    })
  }
  console.log('å®Œæ•´ListQuestionRspå¯¹è±¡:', listRsp)
  console.log('ListQuestionRsp JSON:', JSON.stringify(listRsp.toJSON(), null, 2))
  console.log('========================================')
  console.log(' ')

  return listRsp.infos || []
}

/**
 * æäº¤æ»¡æ„åº¦è¯„ä»·
 * @param {number} questionId - æŠ•è¯‰ID
 * @param {number} rating - è¯„åˆ†ï¼ˆ1-5æ˜Ÿï¼‰
 * @returns {Promise<void>}
 */
export async function submitSatisfactionRating(questionId, rating) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, UpdateQuestionReq, QuestionInfo } = proto.po

  const questionInfo = QuestionInfo.create({
    questionId: questionId,
    satisfactionRating: rating,
    ratingTime: Date.now()
  })

  const updateReq = UpdateQuestionReq.create({
    questionInfo: questionInfo
  })

  await request(MsgType.TMT_UpdateQuestionReq, updateReq)
}
