/**
 * å®¶åº­ä¿¡æ¯ç›¸å…³API
 */

import { request } from './request'

/**
 * è·å–å®¶åº­ä¿¡æ¯åˆ—è¡¨
 * @param {number} page - é¡µç 
 * @param {number} size - æ¯é¡µæ•°é‡
 * @returns {Promise<Array>}
 */
export async function getPeopleList(page = 1, size = 10) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, ListPeopleInfoReq, ListPeopleInfoRsp } = proto.po

  console.log('=== è·å–å®¶åº­ä¿¡æ¯åˆ—è¡¨è¯·æ±‚ ===')
  console.log('é¡µç :', page, 'æ¯é¡µæ•°é‡:', size)

  const listReq = ListPeopleInfoReq.create({
    page: page,
    size: size
  })

  const response = await request(MsgType.TMT_ListPeopleInfoReq, listReq)
  const listRsp = ListPeopleInfoRsp.decode(response.msg)

  console.log('========================================')
  console.log('ğŸ‘¨â€ğŸ‘©â€ğŸ‘§â€ğŸ‘¦ å®¶åº­ä¿¡æ¯åˆ—è¡¨å“åº” - è§£ç åçš„ä¸šåŠ¡æ•°æ®')
  console.log('========================================')
  console.log('ä¿¡æ¯æ•°é‡:', listRsp.infos?.length || 0)
  if (listRsp.infos && listRsp.infos.length > 0) {
    console.log('ä¿¡æ¯åˆ—è¡¨:')
    listRsp.infos.forEach((people, index) => {
      console.log(`  [${index + 1}] å§“å:${people.peopleName} èº«ä»½è¯:${people.peopleCardId}`)
    })
  }
  console.log('å®Œæ•´ListPeopleInfoRspå¯¹è±¡:', listRsp)
  console.log('ListPeopleInfoRsp JSON:', JSON.stringify(listRsp.toJSON(), null, 2))
  console.log('========================================')
  console.log(' ')

  return listRsp.infos || []
}

/**
 * åˆ›å»ºå®¶åº­ä¿¡æ¯ï¼ˆæ‘å¹²éƒ¨ï¼‰
 * @param {Object} peopleInfo - å®¶åº­ä¿¡æ¯
 * @returns {Promise<void>}
 */
export async function createPeople(peopleInfo) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, CreatePeopleReq, PeopleInfo } = proto.po

  console.log('=== åˆ›å»ºå®¶åº­ä¿¡æ¯è¯·æ±‚ ===')
  console.log('å®¶åº­ä¿¡æ¯:', peopleInfo)

  const peopleInfoProto = PeopleInfo.create(peopleInfo)

  const createReq = CreatePeopleReq.create({
    peopleInfo: peopleInfoProto
  })

  await request(MsgType.TMT_CreatePeopleReq, createReq)

  console.log('========================================')
  console.log('âœ… å®¶åº­ä¿¡æ¯åˆ›å»ºæˆåŠŸ')
  console.log('========================================')
  console.log(' ')
}

/**
 * æ›´æ–°å®¶åº­ä¿¡æ¯ï¼ˆæ‘å¹²éƒ¨ï¼‰
 * @param {Object} peopleInfo - å®¶åº­ä¿¡æ¯
 * @param {boolean} isDel - æ˜¯å¦åˆ é™¤
 * @returns {Promise<void>}
 */
export async function updatePeople(peopleInfo, isDel = false) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, UpdatePeopleReq, PeopleInfo } = proto.po

  console.log('=== æ›´æ–°å®¶åº­ä¿¡æ¯è¯·æ±‚ ===')
  console.log('å®¶åº­ä¿¡æ¯:', peopleInfo)
  console.log('æ˜¯å¦åˆ é™¤:', isDel)

  const peopleInfoProto = PeopleInfo.create(peopleInfo)

  const updateReq = UpdatePeopleReq.create({
    peopleInfo: peopleInfoProto,
    isDel: isDel
  })

  await request(MsgType.TMT_UpdatePeopleReq, updateReq)

  console.log('========================================')
  console.log('âœ… å®¶åº­ä¿¡æ¯æ›´æ–°æˆåŠŸ')
  console.log('========================================')
  console.log(' ')
}
