/**
 * å­¦ä¹ èµ„æ–™ç›¸å…³API
 */

import { request } from './request'

/**
 * è·å–å­¦ä¹ èµ„æ–™åˆ—è¡¨
 * @param {number} page - é¡µç 
 * @param {number} size - æ¯é¡µæ•°é‡
 * @returns {Promise<Array>}
 */
export async function getStudyList(page = 1, size = 10) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, ListStudyReq, ListStudyRsp } = proto.po

  console.log('=== è·å–å­¦ä¹ èµ„æ–™åˆ—è¡¨è¯·æ±‚ ===')
  console.log('é¡µç :', page, 'æ¯é¡µæ•°é‡:', size)

  const listReq = ListStudyReq.create({
    page: page,
    size: size
  })

  const response = await request(MsgType.TMT_ListStudyReq, listReq)
  const listRsp = ListStudyRsp.decode(response.msg)

  console.log('========================================')
  console.log('ğŸ“š å­¦ä¹ èµ„æ–™åˆ—è¡¨å“åº” - è§£ç åçš„ä¸šåŠ¡æ•°æ®')
  console.log('========================================')
  console.log('èµ„æ–™æ•°é‡:', listRsp.infos?.length || 0)
  if (listRsp.infos && listRsp.infos.length > 0) {
    console.log('èµ„æ–™åˆ—è¡¨:')
    listRsp.infos.forEach((study, index) => {
      console.log(`  [${index + 1}] ID:${study.studyId} æ ‡é¢˜:${study.studyTitle} ç±»å‹:${study.studyType}`)
    })
  }
  console.log('å®Œæ•´ListStudyRspå¯¹è±¡:', listRsp)
  console.log('ListStudyRsp JSON:', JSON.stringify(listRsp.toJSON(), null, 2))
  console.log('========================================')
  console.log(' ')

  return listRsp.infos || []
}

/**
 * åˆ›å»ºå­¦ä¹ èµ„æ–™ï¼ˆæ‘å¹²éƒ¨ï¼‰
 * @param {Object} studyInfo - å­¦ä¹ èµ„æ–™ä¿¡æ¯
 * @returns {Promise<void>}
 */
export async function createStudy(studyInfo) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, CreateStudyReq, StudyInfo } = proto.po

  console.log('=== åˆ›å»ºå­¦ä¹ èµ„æ–™è¯·æ±‚ ===')
  console.log('èµ„æ–™ä¿¡æ¯:', studyInfo)

  const studyInfoProto = StudyInfo.create(studyInfo)

  const createReq = CreateStudyReq.create({
    studyInfo: studyInfoProto
  })

  await request(MsgType.TMT_CreateStudyReq, createReq)

  console.log('========================================')
  console.log('âœ… å­¦ä¹ èµ„æ–™åˆ›å»ºæˆåŠŸ')
  console.log('========================================')
  console.log(' ')
}

/**
 * æ›´æ–°å­¦ä¹ èµ„æ–™ï¼ˆæ‘å¹²éƒ¨ï¼‰
 * @param {Object} studyInfo - å­¦ä¹ èµ„æ–™ä¿¡æ¯
 * @param {boolean} isDel - æ˜¯å¦åˆ é™¤
 * @returns {Promise<void>}
 */
export async function updateStudy(studyInfo, isDel = false) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, UpdateStudyReq, StudyInfo } = proto.po

  console.log('=== æ›´æ–°å­¦ä¹ èµ„æ–™è¯·æ±‚ ===')
  console.log('èµ„æ–™ä¿¡æ¯:', studyInfo)
  console.log('æ˜¯å¦åˆ é™¤:', isDel)

  const studyInfoProto = StudyInfo.create(studyInfo)

  const updateReq = UpdateStudyReq.create({
    studyInfo: studyInfoProto,
    isDel: isDel
  })

  await request(MsgType.TMT_UpdateStudyReq, updateReq)

  console.log('========================================')
  console.log('âœ… å­¦ä¹ èµ„æ–™æ›´æ–°æˆåŠŸ')
  console.log('========================================')
  console.log(' ')
}

/**
 * æ”¶è—/å–æ¶ˆæ”¶è—å­¦ä¹ èµ„æ–™
 * @param {number} studyId - å­¦ä¹ èµ„æ–™ID
 * @param {boolean} isStar - æ˜¯å¦æ”¶è—
 * @returns {Promise<void>}
 */
export async function toggleStarStudy(studyId, isStar) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, StarStudyReq } = proto.po

  const starReq = StarStudyReq.create({
    studyId: studyId,
    isStar: isStar
  })

  await request(MsgType.TMT_StarStudyReq, starReq)
}

/**
 * è·å–æˆ‘çš„æ”¶è—åˆ—è¡¨
 * @param {number} page - é¡µç 
 * @param {number} size - æ¯é¡µæ•°é‡
 * @returns {Promise<Array>}
 */
export async function getMyStarList(page = 1, size = 10) {
  const proto = await import('@/proto/proto.js')
  const { MsgType, ListUserStarStudyReq, ListUserStarStudyRsp } = proto.po

  const listReq = ListUserStarStudyReq.create({
    page: page,
    size: size
  })

  const response = await request(MsgType.TMT_ListUserStarStudyReq, listReq)
  const listRsp = ListUserStarStudyRsp.decode(response.msg)

  console.log('========================================')
  console.log('â­ æˆ‘çš„æ”¶è—åˆ—è¡¨å“åº” - è§£ç åçš„ä¸šåŠ¡æ•°æ®')
  console.log('========================================')
  console.log('æ”¶è—æ•°é‡:', listRsp.infos?.length || 0)
  console.log('å®Œæ•´ListUserStarStudyRspå¯¹è±¡:', listRsp)
  console.log('========================================')
  console.log(' ')

  return listRsp.infos || []
}
